- Fixed some MOTD problems: remote MOTD gone after rehash (#0001007) and motd time, etc...
- Fixed _some_ gcc3.3 + -Wall warnings.
- Fixed a bug where the win32 config editor could crash if the file contained color codes.
- Resolver fix nr #1 (prolly not "the real problem").
- Minor oob fix for parse_v4_netmask
- Fixed another serious bug in the win32 resolver.
- Removed mutex stuff from rem_request, no longer needed, should make the resolver much
  faster.
- Implemented short motds (ircd.smotd). If you don't know what short motds are, read on:
   short motds are a method of conserving bandwidth. When a user connects ircd.smotd
   is displayed (or a tld::shortmotd). This file contains brief text. Alternatively,
   ircd.motd (or tld::motd) is displayed when a user types /motd. The idea behind this is
   instead of displaying huge ASCII art, and tons of text to every user when they connect
   (since most users will ignore it anyway) you only show that stuff to users who specifically
   request it. Also, if you choose not to use short motds, everything will function as it used
   to the ircd.motd (or tld::motd) will be displayed both when users connect and /motd.
- Changed a few messages so that they use PRIVMSG when being sent to a WebTV user rather than
  using NOTICE.
- Added the TRE regex library to extras/tre (minor modifications to reduce source size)
- Made ./Config configure, compile, and install TRE
- Implemented +a/+q prefixes (#define PREFIX_AQ in config.h) read the comment above PREFIX_AQ
  in include/config.h for more information.
- Fixed PRIVMSG bug with multiple targets.
- Yet another resolver fix
- Fixed a bug with using crontab
- Docs update
- Temporarily disabled compiling TRE 
*** Unreal3.2-beta17 release *** (god save us)
- Modified './update', now points to docs until we have a new update thingy.
- Fixed bug with /list and '?' wildcard, reported by maGGus.
- Fixed a few fdlist bugs in SVSMODE/SVS2MODE found by Aither.