@@ -4779,8 +4779,10 @@ int	_test_link(ConfigFile *conf, ConfigEntry *ce)
 		if (cep->ce_vardata && (strlen(cep->ce_vardata) > 6) && !strchr(cep->ce_vardata, ':') &&
 		    isdigit(cep->ce_vardata[strlen(cep->ce_vardata)-1]))
 		{
-			config_status("%s:%i: link %s is probably IPv4, use the ::ffff:1.2.3.4 form instead",
-						cep->ce_fileptr->cf_filename, cep->ce_varlinenum, ce->ce_vardata);
+			config_status("%s:%i: link %s has link::hostname set to '%s' which probably is IPv4, "
+			              "use the ::ffff:1.2.3.4 form instead",
+						cep->ce_fileptr->cf_filename, cep->ce_varlinenum, ce->ce_vardata,
+						cep->ce_vardata);
 		}
 	}
 #endif
